# vanga

./: .gitignore  .noindex  .pre-commit-config.yaml  ARCHITECTURE.md  CONSTRAINTS.md  Cargo.toml  INSTRUCTIONS.md  Makefile  README.md  install.sh  optimized.toml
.github/workflows/: ci.yml  dependencies.yml  release.yml
configs/: adaptive_samples.toml  advanced_custom.toml  attention_moh.toml  attention_moh_conservative.toml  attention_moh_efficient.toml  augmented_training.toml  backtest.toml  bias_correction.toml  comprehensive_targets.toml  cross_asset_training.toml  crypto_features.toml  crypto_hybrid.toml  debug_alternative_splits.toml  debug_val_train_ratio.toml  deep_lstm_layernorm.toml  emergency_minimal.toml  example_cross_asset.toml  example_single_asset.toml  frac_prodigy.toml  gradient_fix.toml  hybrid_training.toml  minimal_custom.toml  per_window_weights.toml  prediction.toml  prodigy.toml  quick_start.toml  realtime.toml  reduced_capacity_test.toml  test_training.toml  tft_enhanced.toml  tft_gnn_large_portfolio.toml  tft_gnn_multi_asset.toml  tft_gnn_small_portfolio.toml  training.toml  training_config.toml  ultra_stable_fix.toml  validation_state_test.toml  vdsm_moh.toml  window_decay_example.toml
configs/optimizer_examples/: README.md  adadelta_sparse_data.toml  adagrad_short_training.toml  adam_general_purpose.toml  adamax_large_gradients.toml  adamw_crypto_optimized.toml  nadam_momentum_markets.toml  radam_stable_convergence.toml  rmsprop_volatile_markets.toml  sgd_fine_tuning.toml
data/: sample_btc.csv
doc/: 01-introduction.md  02-installation.md  03-data-preparation.md  04-training.md  05-auto-optimization.md  05-predictions.md  06-technical-indicators.md  07-architecture.md  08-targets.md  09-evaluation.md  10-final-completion.md  10-technical-implementation.md  11-usage-examples.md  12-quick-start.md  13-usage-guide.md  14-troubleshooting.md  15-attention-guide.md  16-implementation-summary.md  17-tft-integration-guide.md  18-backtesting-guide.md  18-model-architecture-comparison.md  19-tensor-contiguity-guide.md  19-tft-gnn-training-guide.md  20-configuration.md  20-implementation-summary.md  21-learning-rate-optimization.md  21-multi-symbol-guide.md  22-cli-examples.md  22-optimizer-selection-guide.md  23-multi-symbol-summary.md  23-optimizer-performance-analysis.md  24-adaptive-orders-system.md  24-final-completion-summary.md  25-mixture-of-head-attention.md  25-xgboost-hybrid-integration.md  26-learning-rate-schedules.md  27-window-decay-scheduler-integration.md  28-efficiency-focused-window-splitting.md  29-reproducible-training.md  30-target-specific-balanced-windows-implementation.md  (+4 more)
examples/: EPOCH_CONFIGURATION_GUIDE.md  README.md  README_TRAINING_CONFIG.md  basic_features.toml  custom_auto_training.toml  dev_training.toml  example_features.toml  fixed_epochs_training.toml  high_performance_training.toml  production_training.toml  research_training.toml  run_examples.sh  sentiment_features.toml  test_no_hardcode.toml  test_training_scenarios.sh
scripts/: README.md  benchmark_optimizers.py  benchmark_optimizers.sh  generate_sample_data.py  optimizer_selector.py  requirements.txt  test_validation.sh  validate_features.py
src/: lib.rs  main.rs  ta_tests.rs
src/api/: backtester.rs  mod.rs  multi_target_predictor.rs  predictor.rs  predictor_test.rs  trainer.rs  trainer_balance_test.rs  trainer_target_alignment_test.rs  trainer_test.rs  trainer_truncation_test.rs
src/cli/: mod.rs  symbol_parser.rs
src/config/: features.rs  features_test.rs  mod.rs  model.rs  prediction.rs  trading.rs  training.rs  training_augmentation_test.rs
src/data/: augmentation.rs  augmentation_test.rs  balance.rs  balance_augmentation_test.rs  balance_critical_test.rs  balance_split_test.rs  balance_test.rs  debug_sampling_test.rs  diversity.rs  diversity_test.rs  loader.rs  loader_test.rs  mod.rs  preprocessor.rs  preprocessor_test.rs  schema.rs  schema_test.rs  sequence.rs  sequence_fixed.rs  sequence_test.rs  simple_validation_test.rs  structures.rs  structures_test.rs  target_converter.rs  target_converter_test.rs  truncation_test.rs  validation_overlap_test.rs
src/features/: consolidation_test.rs  cross_asset.rs  custom.rs  engineering.rs  feature_validation_test.rs  liquidity.rs  liquidity_test.rs  microstructure.rs  mod.rs  price_inefficiency_test.rs  regime.rs  regime_test.rs  ta_helpers.rs  ta_tests.rs  technical.rs  technical_math_test.rs  technical_test.rs  validation.rs  volatility.rs
src/model/: attention.rs  attention_loss.rs  attention_loss_test.rs  attention_moh.rs  attention_moh_test.rs  attention_moh_wrapper.rs  attention_moh_wrapper_test.rs  attention_optimizer.rs  attention_optimizer_test.rs  attention_test.rs  attention_viz.rs  bias_correction.rs  bias_correction_integration_test.rs  bias_correction_test.rs  bias_correction_training_integration_test.rs  dropout_consistency.rs  dropout_tests.rs  dual_loss_system.rs  loss.rs  loss_test.rs  loss_validation_tests.rs  lstm_simple.rs  lstm_simple_test.rs  mod.rs  multi_target.rs  multi_target_test.rs  ordinal_smartcore.rs  ordinal_smartcore_test.rs  regime_calibration.rs  regime_calibration_tests.rs  regime_metrics.rs  smartcore_backend.rs  smartcore_test.rs  tensor_crypto_loss.rs  xgboost.rs  xgboost_test.rs
src/optimization/: auto_tuner.rs  feature_selection.rs  frac_adam.rs  frac_adam_test.rs  frac_nadam.rs  (+10 more)
test_data/: large_sample_btcusdt.csv  sample_btcusdt.csv
tests/: backtesting_integration.rs  balanced_window_splitting_test.rs  diverse_splits_test.rs  diversity_integration_demo.rs  diversity_performance_test.rs  efficiency_focused_window_test.rs  hybrid_persistence_integration.rs  progressive_increment_fix_test.rs  progressive_increment_validation_test.rs  realtime_integration.rs  shuffle_validation_test.rs  single_window_edge_cases_test.rs  smart_order_generator_test.rs  smartcore_integration.rs  validation_gap_tests.rs  window_decay_scheduler_integration_test.rs  window_decay_test.rs  window_decay_tests.rs  window_increment_validation_test.rs  window_splitting_analysis_test.rs
(+159 files in other folders)
