[package]
name = "vanga"
version = "0.1.0"
edition = "2021"
description = "LSTM-based cryptocurrency forecasting system with automatic feature engineering"
license = "MIT"

[dependencies]
# LSTM and ML - Migrated to Candle (latest stable)
candle-core = "0.9"
candle-nn = "0.9"
candle-optimisers = "0.9"
ndarray = "0.15"
ndarray-stats = "0.5"
linfa = "0.7"
linfa-preprocessing = "0.7"

# Data processing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.35", features = ["lazy", "csv", "temporal", "strings"] }

# Technical indicators and math
ta = "0.5"  # Technical analysis indicators
statrs = "0.16"  # Statistical functions
nalgebra = "0.32"

# Optimization and hyperparameter tuning
argmin = "0.8"
argmin-math = "0.3"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
config = "0.13"

# Async and utilities
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.18", features = ["v4"] }

# Serialization and persistence
bincode = "1.3"
rmp-serde = "1.3"  # MessagePack for model serialization
lazy_static = "1.5"  # For global static instances

# Parallel processing
rayon = "1.11"
rand = "0.9.2"
rand_distr = "0.4"  # Probability distributions for Bayesian optimization
num_cpus = "1.17"  # For optimal thread configuration

# Real-time streaming and file watching
notify = "6.1"
tokio-stream = "0.1"
futures = "0.3"
linemux = "0.3"
csv-async = "1.3"
# Removed problematic xgb crate - replaced with smartcore
# xgb = "3.0.4"  # Had learning issues - uniform predictions
smartcore = { version = "0.3", features = ["serde"] }  # Pure Rust ML library with Random Forest, Decision Trees

# macOS-specific Metal support
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
tempfile = "3.21"

[[bin]]
name = "vanga"
path = "src/main.rs"

[lib]
name = "vanga"
path = "src/lib.rs"

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path

# Enable static linking
# [profile.release]
# lto = true        # Enable Link Time Optimization
# codegen-units = 1 # Reduce parallel code generation units for better optimization
# panic = "abort"  # Abort on panic for smaller binary size
# strip = true      # Strip symbols from binary
